# crypto_trading

./: CMakeLists.txt
src/exchanges/binance/: client.cpp  client.h
src/trading_engine/: trading_engine.cpp  trading_engine.h
